Авторизация и регистрация через firebase

--- a/package.json
+++ b/package.json
@@ -43,7 +43,10 @@
       "parser": "babel-eslint"
     },
     "rules": {
-      "no-console": "off"
+      "no-console": "off",
+      "no-unused-vars": "warn",
+      "no-useless-catch": "off"
+
     }
   },
   "browserslist": [
