--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.26.1",
     "core-js": "^3.6.5",
     "firebase": "^9.6.10",
+    "materialize-css": "^1.0.0",
     "node-sass": "^7.0.1",
     "sass-loader": "^12.6.0",
     "vue": "^2.6.11",
@@ -45,8 +46,8 @@
     "rules": {
       "no-console": "off",
       "no-unused-vars": "warn",
-      "no-useless-catch": "off"
-
+      "no-useless-catch": "off",
+      "no-empty": "warn"
     }
   },
   "browserslist": [
